fixed layout issues on blog page

--- a/blog.css
+++ b/blog.css
@@ -1,5 +1,4 @@
 blog_container {
-    width: 33%;
     display: inline-flex;
     flex-wrap: wrap;
     height: fit-content;
@@ -18,7 +17,11 @@ blog_container {
 
 .blogs {
     text-align: left;
-    width: 45%;
+    width: 33%;
+    display: inline-flex;
+    flex-wrap: wrap;
+    height: fit-content;
+    min-width: min-content;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: white;
     background-color: #212121;
@@ -34,14 +37,14 @@ blog_container {
     animation: fadeInAnimation ease 1s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
-    animation-delay: 0.5s;
+    animation-delay: 1s;
 }
 
 #blog2 {
     animation: fadeInAnimation ease 1s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
-    animation-delay: 1s;
+    animation-delay: 0.5s;
 }
 
 
